--- a/Tourism/appsettings.json
+++ b/Tourism/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Host=localhost;Port=5432;Database=aspnet;Username=postgres;Password=password123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
