--- a/Tourism/Tourism.csproj
+++ b/Tourism/Tourism.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,6 +21,7 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.12.17" />
     </ItemGroup>
 
     <ItemGroup>
@@ -30,6 +32,7 @@
 
     <ItemGroup>
       <Folder Include="Data\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
