Refactor authentication and user management: update AuthController, add DTOs, implement AuthService and email settings

--- a/Tourism/appsettings.json
+++ b/Tourism/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "saleemshalabi90@gmail.com",
+    "SenderPassword": "iuavnyretzepsvev"
+  },
   "AllowedHosts": "*"
 }
