--- a/Tourism/Tourism.csproj
+++ b/Tourism/Tourism.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Migrations\**" />
+      <Content Remove="Migrations\**" />
+      <EmbeddedResource Remove="Migrations\**" />
+      <None Remove="Migrations\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
@@ -28,11 +35,6 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Data\" />
-      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
